--- a/estilo.css
+++ b/estilo.css
@@ -1,36 +1,45 @@
 @import url("https://fonts.googleapis.com/css2?family=Roboto&display=swap");
 
 html {
-    font-family: "Roboto", "sans-serif";
-    line-height: 1.5;
+  font-family: "Roboto", sans-serif;
+  line-height: 1.5;
+  font-size: 16px;
+  background-color: #f5f5f5;
 }
 
 h1 {
-    text-align: center;
-    color: #666;
-    font-size: calc(1.5rem + 1vw);
-    margin-bottom: 20px;
+  text-align: center;
+  color: #333;
+  font-size: calc(1.5rem + 2vw);
+  margin-bottom: 20px;
 }
 
 .calculadora {
-    width: 200px;
-    margin: 0 auto;
-    padding: 20px;
-    border: 1px solid #999;
-    border-radius: 5px;
-    background-color: #010101;
-    box-shadow: 0 0 10px #999;
+  width: 200px;
+  margin: 0 auto;
+  padding: 20px;
+  border: 1px solid #999;
+  border-radius: 5px;
+  background-color: #e6e6e6;
+  box-shadow: 0 2px 10px rgba(0, 0, 0, 0.2);
 }
 
 #display {
-    width: 100%;
-    margin-bottom: 10px;
+  width: 100%;
+  margin-bottom: 10px;
+  background-color: #fff;
+  border: 1px solid #999;
+  border-radius: 5px;
+  padding: 5px;
+  text-align: right;
+  font-size: 24px;
+  color: #333;
 }
 
 .keypad {
-    display: grid;
-    grid-template-columns: repeat(4, 1fr);
-    grid-gap: 5px;
+  display: grid;
+  grid-template-columns: repeat(4, 1fr);
+  grid-gap: 5px;
 }
 
 .operator,
@@ -38,61 +47,54 @@ h1 {
 .equal,
 .clear,
 .erase {
-    width: 100%;
-    height: 40px;
-}
-
-.operator,
-.number {
-    background-color: #f2f2f2;
-    border: 1px solid #999;
-    border-radius: 5px;
-    font-size: 20px;
-    color: #666;
+  width: 100%;
+  height: 40px;
+  background-color: #f5f5f5;
+  border: 1px solid #999;
+  border-radius: 5px;
+  font-size: 20px;
+  color: #333;
 }
 
 .erase,
 .clear,
 .operator {
-    color: orange;
+  color: #ff6347;
 }
 
 .operator:hover,
-.number:hover {
-    background-color: #e6e6e6;
+.number:hover, .erase:hover, .clear:hover {
+  background-color: #e6e6e6;
+  border-color: #ff6400;
+  box-shadow: 0 2px 10px rgba(0, 0, 0, 0.2);
 }
 
 .equal {
-    background-color: orange;
-    border: 1px solid #999;
-    border-radius: 5px;
-    font-size: 20px;
-    color: #f2f2f2;
+  background-color: #ff6347;
+  border: 1px solid #fff;
+  border-radius: 100%;
+  font-size: 20px;
+  color: #fff;
 }
 
 .equal:hover {
-    background-color: #ff8c00;
+  background-color: #ff5233;
+  border-color: #ff6400;
 }
 
 footer {
-    text-align: center;
-    margin-bottom: 20px;
-    color: #666;
-    font-size: 14px;
-    padding: 20px;
-    justify-content: left;
+  text-align: center;
+  margin-bottom: 20px;
+  color: #666;
+  font-size: 14px;
+  padding: 20px;
 }
 
 footer p {
-    color: #fff;
-    text-decoration: none;
-}
-strong {
-    color: orange;
+  color: #333;
+  text-decoration: none;
 }
 
-@media (max-width: 768px) {
-    .calculadora {
-        width: 100%;
-    }
+strong {
+  color: #ff6347;
 }
