--- a/style.css
+++ b/style.css
@@ -4,7 +4,8 @@ html {
   font-family: "Roboto", sans-serif;
   line-height: 1.5;
   font-size: 16px;
-  background-color: #f5f5f5;
+  background-color: #f1f1f1;
+  color: #333;
 }
 
 h1 {
@@ -15,13 +16,26 @@ h1 {
 }
 
 .calculadora {
-  width: 200px;
+  width: 300px;
   margin: 0 auto;
   padding: 20px;
   border: 1px solid #999;
-  border-radius: 5px;
+  border-radius: 10px;
   background-color: #e6e6e6;
   box-shadow: 0 2px 10px rgba(0, 0, 0, 0.2);
+  position: absolute;
+  top: 50%;
+  left: 50%;
+  transform: translate(-50%, -50%);
+}
+
+#historico {
+  width: 300px;
+  margin: 0 auto 10px;
+  padding: 40px;
+  font-size: 20px;
+  color: #333;
+  text-align: right;
 }
 
 #display {
@@ -72,7 +86,7 @@ h1 {
 .equal {
   background-color: #ff6347;
   border: 1px solid #fff;
-  border-radius: 100%;
+  border-radius: 20%;
   font-size: 20px;
   color: #fff;
 }
@@ -83,11 +97,15 @@ h1 {
 }
 
 footer {
+  position: fixed;
+  bottom: 0;
+  left: 0;
+  width: 100%;
   text-align: center;
-  margin-bottom: 20px;
   color: #666;
   font-size: 14px;
-  padding: 60px;
+  padding: 5px;
+  background-color: #fff;
 }
 
 footer p {
